# vrx

./: .gitignore  .hgignore  Changelog.md  README.md  bitbucket-pipelines.yml  setup_robotx_ws.sh  vmrc.repos
cora_description/: CMakeLists.txt  package.xml
cora_description/models/: model.config
cora_description/urdf/: cora.urdf.xacro  cora.xacro  cora_dynamics_plugin.xacro  cora_thruster_config.xacro  cora_v1.urdf.xacro  macros.xacro  thrusters.xacro
rangebearing_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
rangebearing_gazebo_plugin/launch/: box.launch  box_model.launch
rangebearing_gazebo_plugin/src/: RangeBearing.cc  RangeBearing.hh  RangeBearingPrivate.hh  update_timer.h
rangebearing_gazebo_plugin/urdf/: boxbot.urdf  rangebearing.urdf.xacro
rangebearing_gazebo_plugin/worlds/: box.world  box_model.world
robotx_gazebo/: CMakeLists.txt  README.md  dock_generator.erb  package.xml
robotx_gazebo/config/: custom_rosconsole.conf  diffdrive.yaml  pinger.yaml
robotx_gazebo/launch/: light_buoy.launch  pinger.launch  quat2rpy.launch  sandisland.launch  sandisland_sensors.launch  sandisland_static.launch  usv_diffdrive.launch  usv_joydrive.launch  usv_keydrive.launch  vmrc.launch
robotx_gazebo/nodes/: light_buoy_controller.py  pinger_visualisation.py  quat2rpy.py  set_pinger_position.py  twist2drive_diff.py  twist2drive_keyboard.py  twist2thrust.py
robotx_gazebo/scripts/: twist2drive_diff.py
robotx_gazebo/src/: gazebo_ros_color.cc  light_buoy_controller.cc  quat2rpy.py  symbol_controller.cc  usv_gazebo_dynamics_plugin.cc  usv_gazebo_thrust_plugin.cc
robotx_gazebo/test/: frame_test.cpp  helpers.hh  sandisland.cc  sandisland.cpp  sandisland.test  ugdp_test.cpp
robotx_gazebo/thrust_curve_fit/: glf_fit.py  kingfisher_tcurve_nohead.csv  tcurve.csv  wamv_tcurve_nohead.csv
robotx_gazebo/urdf/: rectify_opengl_plugin.ods  usv_gazebo_dynamics_plugin.xacro  wamv_gazebo_dynamics_plugin.xacro  wamv_gazebo_thrust_plugin.xacro  wamv_gazebo_wind_plugin.xacro  wamv_robotx.urdf  wamv_robotx.xacro
robotx_gazebo/worlds/: example_course.world.xacro  light_buoy.xacro  macros.xacro  navigation_challenge.xacro  no_gravity.world  placard.xacro  sandisland.world  sandisland.world.xacro  sandisland.xacro  sandisland_buoys.world  sandisland_buoys.world.xacro
sandwich_description/: CMakeLists.txt  package.xml
sandwich_description/urdf/: macros.xacro  sandwich.urdf.xacro  sandwich.xacro  sandwich_base.urdf.xacro  sandwich_dynamics_plugin.xacro  sandwich_thruster_config.xacro  thruster.xacro
usv_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
usv_gazebo_plugins/launch/: buoyancy_plugin_demo.launch  four_boats.launch  four_boats_mathematica.launch
usv_gazebo_plugins/mathematica_examples/: testSTL.nb
usv_gazebo_plugins/matlab_examples/: findWaterline.m  findWaterlineAutomated.m  getAVS.m  getAVSExperimental.m  getWaterLine.m  getWaterLineGreensTheorem.m  placeBoat.m  plotAVSCurve.m
usv_gazebo_plugins/meshes/: shape_1_boat_convex.stl  shape_1_boat_mathematica.stl  shape_2_boat_convex.stl  shape_2_boat_mathematica.stl  shape_4_boat_convex.stl  shape_4_boat_mathematica.stl  shape_8_boat_convex.stl  shape_8_boat_mathematica.stl
usv_gazebo_plugins/msg/: UsvDrive.msg
usv_gazebo_plugins/src/: acoustic_pinger_plugin.cc  buoyancy.cpp  buoyancy_gazebo_plugin.cc  force_visual_plugin.cc  polyhedron_volume.cc  polyhedron_volume.cpp  shape_volume.cc  usv_gazebo_dynamics_plugin.cc  usv_gazebo_gps_plugin.cc  usv_gazebo_pinger_plugin.cc  usv_gazebo_thrust_plugin.cc  usv_gazebo_v3d_plugin.cc  usv_gazebo_wind_plugin.cc  volume_object.cpp
usv_gazebo_plugins/test/: buoyancy_test.cc
usv_gazebo_plugins/worlds/: buoyancy_plugin_demo.world.xacro  fourboats.world  fourboats_mathematica.world
usv_msgs/: CMakeLists.txt  package.xml
vmrc/: CMakeLists.txt  package.xml
vmrc_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
vmrc_gazebo/config/: custom_rosconsole.conf
vmrc_gazebo/launch/: find_symbols_and_dock.launch  navigation_task.launch  quat2rpy.launch  sandisland.launch  station_keeping.launch  usv_joydrive.launch  usv_keydrive.launch  vmrc.launch  wayfinding.launch
vmrc_gazebo/msg/: Task.msg
vmrc_gazebo/src/: gazebo_ros_color.cc  light_buoy_controller.cc  light_buoy_plugin.cc  navigation_scoring_plugin.cc  placard_plugin.cc  scan_dock_scoring_plugin.cc  scoring_plugin.cc  stationkeeping_scoring_plugin.cc  symbol_controller.cc  wayfinding_scoring_plugin.cc
vmrc_gazebo/test/: sandisland.test
vmrc_gazebo/worlds/: example_course.world.xacro  find_symbols_and_dock.world.xacro  navigation_task.world.xacro  sandisland.world.xacro  sandisland.xacro  stationkeeping_task.world.xacro  wayfinding_task.world.xacro
vorc_gazebo/: CMakeLists.txt  package.xml
vorc_gazebo/config/: pinger.yaml  rviz_cora.rviz
vorc_gazebo/launch/: gymkhana.launch  localization_example.launch  marina.launch  perception.launch  playback.launch  rviz.launch  station_keeping.launch  usv_joydrive.launch  usv_keydrive.launch  wayfinding.launch
vorc_gazebo/nodes/: pinger_visualization.py  set_pinger_position.py
vorc_gazebo/worlds/: gymkhana.world.xacro  marina.world.xacro  marina.xacro  perception.world.xacro  station_keeping.world.xacro  wayfinding.world.xacro
vrx_2019/: CMakeLists.txt  package.xml
vrx_2019/launch/: dock.launch  navigation_task.launch  perception_task.launch  pinger.launch  sandisland.launch  scan_and_dock.launch  station_keeping.launch  vrx.launch  wayfinding.launch
vrx_2019/worlds/: dock.world.xacro  example_course.world.xacro  navigation_task.world.xacro  perception_task.world.xacro  sandisland.world.xacro  sandisland.xacro  (+4 more)
vrx_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  dock_generator.erb  package.xml  setup.py
vrx_gz/: CMakeLists.txt  package.xml
vrx_ign/: .gitignore  CMakeLists.txt  package.xml
vrx_ros/: CMakeLists.txt  package.xml
wamv_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
wamv_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
wave_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+1402 files in other folders)
