<?xml version="1.0"?>
<package format="2">
  <name>robotx_gazebo</name>
  <version>0.0.1</version>
  <description>
    The ROS package for the RobotX competition running in Gazebo.
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="briansbngham@gmail.com">bsb</maintainer>
  <license>Apache 2.0</license>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>wamv_gazebo</depend>
  <depend>xacro</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
