<?xml version="1.0"?>
<package format="2">
  <name>usv_gazebo_plugins</name>
  <version>0.0.1</version>
  <description>
    Gazebo plugins for simulating Unmanned Surface Vehicles
    Originaly copied from https://github.com/bsb808/usv_gazebo_plugins
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="briansbngham@gmail.com">bsb</maintainer>
  <license>Apache 2.0</license>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_dev</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>usv_msgs</depend>  
  <exec_depend>message_runtime</exec_depend>
</package>
