<?xml version="1.0"?>
<package format="3">
  <name>usv_gazebo_plugins</name>
  <version>1.3.0</version>
  <description>
    Gazebo plugins for simulating Unmanned Surface Vehicles
    Originaly copied from https://github.com/bsb808/usv_gazebo_plugins
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="jriveroo@osrfoundation.org">Jose Luis Rivero</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/usv_gazebo_plugins</url>
  <url type="bugtracker">http://github.com/osrf/vrx/issues</url>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>
  <depend>xacro</depend>
  <depend>wave_gazebo_plugins</depend>
  <depend>usv_msgs</depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
