<?xml version="1.0"?>
<package format="3">
  <name>usv_msgs</name>
  <version>0.0.1</version>
  <description>The usv_msgs package.  Contains message definitions to support 
  the development of USV simulations for the Virtual Maritime RobotX 
  Competition. </description>

  <maintainer email="jonathan.wheare@flinders.edu.au">Jonathan Wheare</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
