<?xml version="1.0"?>
<package format="2">
  <name>vmrc</name>
  <version>0.2.0</version>
  <description>
    Metapackage of software to install the Virtual Maritime RobotX Challenge
    (VMRC) environment.
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/vmrc</url>
  <url type="bugtracker">http://bitbucket.org/osrf/vmrc/issues</url>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotx_gazebo</depend>
</package>
