<?xml version="1.0"?>
<package format="2">
  <name>vmrc_gazebo</name>
  <version>0.3.2</version>
  <description>
    The ROS package for the RobotX competition running in Gazebo.
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="jriveroo@osrfoundation.org">Jose Luis Rivero</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/vmrc_gazebo</url>
  <url type="bugtracker">http://bitbucket.org/osrf/vmrc/issues</url>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>std_msgs</depend>
  <depend>wamv_gazebo</depend>
  <depend>xacro</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
